data/derived/sp14/progs/unify/prog4331.ml.out
Characters 166-168:
  | Sine (e1)          -> Printf.sprintf"%s" e1 
                                             ^^
Error: This expression has type expr but an expression was expected of type
         string
